--- a/requirements.txt
+++ b/requirements.txt
@@ -66,6 +66,7 @@ packaging==24.2
 pandas==2.2.3
 pandocfilters==1.5.1
 parso==0.8.4
+patsy==1.0.1
 pillow==11.1.0
 platformdirs==4.3.6
 prometheus_client==0.21.1
@@ -96,6 +97,7 @@ six==1.17.0
 sniffio==1.3.1
 soupsieve==2.6
 stack-data==0.6.3
+statsmodels==0.14.4
 terminado==0.18.1
 threadpoolctl==3.5.0
 tinycss2==1.4.0
@@ -111,3 +113,4 @@ webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
 widgetsnbextension==4.0.13
+xgboost==2.1.4
